# uSockets

./: .gitattributes  .gitignore  .gitmodules  BUILD  CMakeLists.txt  LICENSE  MODULE.bazel  Makefile  NOTICE  README.md  conanfile.py  generate-root-certs.mjs  generate-root-certs.pl  lwipopts.h
.github/workflows/: c-cpp.yml
examples/: echo_server.c  hammer_test.c  hammer_test_unix.c  helper.h  http3_client.c  http3_server.c  http_load_test.c  http_server.c  main.swift  peer_verify_test.c  quic_server.c  self_scale.c  tcp_load_test.c  tcp_server.c  udp_benchmark.c
examples/linux/: netns_server.c
examples/swift_http_server/: main.swift
misc/: manual.md
src/: bsd.c  context.c  epoll_kqueue.rs  flush.rs  libusockets.c  libusockets.h  libusockets_new.h  loop.c  main.c  quic.c  quic.h  socket.c  ssl.c  tcp.c  uSockets.pro  udp.c
src/backends/: epoll.c  libuv.c
src/crypto/: node_root_certs.h  openssl.c  root_certs.h  sni_tree.cpp  ssl_from_pointer.c  ssl_from_pointer.h  wolfssl.c
src/eventing/: asio.cpp  epoll.c  epoll_kqueue.c  gcd.c  kqueue.c  libuv.c
src/interfaces/: context.h  loop.h  poll.h  socket.h  ssl.h  timer.h
src/internal/: bsd.h  common.h  epoll.h  internal.h  libuv.h  loop.h  loop_data.h  ssl.h
src/internal/eventing/: asio.h  epoll.h  epoll_kqueue.h  gcd.h  kqueue.h  libuv.h
src/internal/networking/: bsd.h  packet.h
src/io_uring/: internal.h  io_context.c  io_loop.c  io_socket.c
